# sci-agent

./: LICENSE  README.md  pyproject.toml
.github/workflows/: python-app.yml
skills/scan-lab-motor/: SKILL.md
src/sciagent/: exceptions.py  llm_conn.py  message_proc.py  skill.py  util.py
src/sciagent/agent/: argo.py  asksage.py  base.py  openai.py
src/sciagent/agent/memory/: __init__.py  manager.py  types.py  vector_store.py
src/sciagent/api/: base.py  llm_config.py  memory.py
src/sciagent/gui/: chat.py  start_webui.py
src/sciagent/gui/webui_static/: index.html  script.js  styles.css
src/sciagent/mcp/: __init__.py  server.py
src/sciagent/task_manager/: base.py  factory.py
src/sciagent/tool/: base.py  coding.py  example_calculator.py  mcp.py
tests/: conftest.py  test_asksage_api.py  test_base_task_manager.py  test_coding_tool.py  test_mcp_server.py  test_memory_manager.py  test_message_db_fill.py  test_oai_api.py  test_postgres_vector_store.py  test_purge_image_messages.py  test_skill.py  test_task_manager_register_tools.py  test_tool_manager.py  test_utils.py
